================================================================================
Change history for glaciers
================================================================================

DESIGN ISSUES (user interface):
- [159] user-interface design for climate experiments (dropped?)

HIGH PRIORITY:
- add yaw to fake 3D perspective (terminus, ELA, etc)
- prune debris at moraine so we don't end up with a huge number of debris that slows things down
- debris is reaching the surface above ELA because max thickness is where EL intersects valley floor, Archie will investigate 
- increase zoom on vertical axis by 2x
- glacier advances too fast, get model fix from Archie [550]
- combine "snowfall" and "snowfall reference elevation" into 1 slider (?)
- switch entire user-interface between English and metric units (?)

MEDIUM PRIORITY:
- start sim in steady state, with debris & ripples across entire glacier length, and moraine at terminus
- "steady state" button needs to create a moraine
- "steady state" button needs to advance clock to future time
- "steady state" button needs to fill in missing data in time-dependent graphs
- add depth cues to background image (shading, etc)
- visual representation of snowfall
- always collect data for time-based graphs, keep "latest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- distribute features between Basic and Advanced panels
- implement Save/Load feature
- close & reopen graph windows when switching modules
- main control panel should be the same height in all modules
- PlayArea class is too big, refactor
- AbstractModel class is too big, refactor
- tweak alignment of mountains image, perspective is a little off at headwall

LOW PRIORITY:
- replace MountainsAndValleyNode.getPerspectiveHeight with something cleaner, put it in the model (since Debris uses it)